--- a/booking-platform/package.json
+++ b/booking-platform/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "prisma generate && next build",
+    "postbuild": "npm run db:seed",
     "start": "next start",
     "lint": "eslint",
     "postinstall": "prisma generate",
